--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:theme="@style/GdxTheme" >
         <activity
             android:name="com.destrin.rocket.AndroidLauncher"
-            android:label="@string/app_name" 
-            android:screenOrientation="landscape"
+            android:label="Rocket"
+            android:screenOrientation="portrait"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
