--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Rocket"
         android:theme="@style/GdxTheme" >
         <activity
             android:name="com.destrin.rocket.AndroidLauncher"
